# FFmpegDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mingyangzeng/ffmpgedemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegMusic.cpp  FFmpegMusic.h  FFmpegVideo.cpp  FFmpegVideo.h  Log.h  native-lib.cpp
app/src/main/java/com/mingyangzeng/ffmpgedemo/: MainActivity.kt  Play.kt  VideoListActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_video_list.xml  item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mingyangzeng/ffmpgedemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
